--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<groupId>com.github.hiwepy</groupId>
 	<artifactId>security-cas-spring-boot-starter</artifactId>
 	<description>Spring Boot Starter For Spring Security With Cas</description>
-	<version>1.0.7-SNAPSHOT</version>
+	<version>2.3.x.20240823.RELEASE</version>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<url>https://github.com/hiwepy/${project.artifactId}</url>
 	<packaging>jar</packaging>
@@ -21,7 +21,7 @@
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
 		</license>
 	</licenses>
 
@@ -35,7 +35,7 @@
 	<developers>
 		<developer>
 			<name>wandl</name>
-			<email>hnxyhcwdl1003@163.com</email>
+			<email>hiwepy@gmail.com</email>
 			<roles>
 				<role>developer</role>
 			</roles>
@@ -359,7 +359,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<cas-client.version>3.6.4</cas-client.version>
-		<commons-io.version>2.8.0</commons-io.version>
+		<commons-io.version>2.16.1</commons-io.version>
 		<maven.version>3.0</maven.version>
        	<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
@@ -369,7 +369,7 @@
 		<maven-nexus-staging-plugin.version>1.6.8</maven-nexus-staging-plugin.version>
 		<spring-security-biz.version>1.1.4.RELEASE</spring-security-biz.version>
 		<woodstox-asl.version>4.4.1</woodstox-asl.version>
-		<xmemcached.version>2.4.7</xmemcached.version>
+		<xmemcached.version>2.4.8</xmemcached.version>
 	</properties>
 
 	<dependencyManagement>
