--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<groupId>com.github.hiwepy</groupId>
 	<artifactId>security-cas-spring-boot-starter</artifactId>
 	<description>Spring Boot Starter For Spring Security With Cas</description>
-	<version>2.7.x.20240823.RELEASE</version>
+	<version>2.7.x.20241003-SNAPSHOT</version>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<url>https://github.com/hiwepy/${project.artifactId}</url>
 	<packaging>jar</packaging>
@@ -367,7 +367,7 @@
         <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
         <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
 		<maven-nexus-staging-plugin.version>1.6.8</maven-nexus-staging-plugin.version>
-		<spring-security-biz.version>1.1.4.RELEASE</spring-security-biz.version>
+		<spring-boot-starter-security-biz.version>2.7.x.20241003-SNAPSHOT</spring-boot-starter-security-biz.version>
 		<woodstox-asl.version>4.4.1</woodstox-asl.version>
 		<xmemcached.version>2.4.8</xmemcached.version>
 	</properties>
@@ -414,7 +414,7 @@
 			<dependency>
 				<groupId>com.github.hiwepy</groupId>
 				<artifactId>security-biz-spring-boot-starter</artifactId>
-				<version>${spring-security-biz.version}</version>
+				<version>${spring-boot-starter-security-biz.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
